tests/semantic_errors/andrei13_6.tl
require"ifj21"

-- wrong arithm types
function main()
    local id : integer = 34//9.8
end

main()
